Fix readability

--- a/src/components/UserCard.css
+++ b/src/components/UserCard.css
@@ -31,15 +31,19 @@
 }
 
 .card-list-element-content-title{
+    padding-left: 10px;
     float: left;
     width: calc(100% - 95px);
     margin: 0px !important;
     display: flex;
     align-items: center;
+    background-color: rgba(255,255,255,0.25);
+    border-radius: 10px;
 }
 
 .card-dates-container{
     float: right;
+    padding-left: 5px;
 }
 
 .start-date-chip-container{
